canary/planning-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: planning-app-canary
  namespace: planning-app
spec:
  selector:
    app: planning-app-canary
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
